--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="password_icon">password_icon</string>
     <string name="login_button">ВОЙТИ</string>
     <string name="error_message">Неправильный логин или пароль</string>
+    <string name="loading_text">Проверка данных…</string>
 </resources>
