--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,14 @@
     <string name="nav_projects">Проекты</string>
     <string name="nav_tasks">Задачи</string>
     <string name="nav_teams">Команды</string>
+    <string name="avatar">avatar</string>
+    <string name="exit_button">exit</string>
+    <string name="reload_button">reload</string>
+    <string name="edit_button">edit</string>
+    <string name="study_info">study information</string>
+    <string name="tasks">Задачи</string>
+    <string name="projects">Проекты</string>
+    <string name="teams">Команды</string>
+    <string name="group">группа</string>
+    <string name="direction">направление</string>
 </resources>
