--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="password">Пароль</string>
     <string name="password_icon">password_icon</string>
     <string name="login_button">ВОЙТИ</string>
-    <string name="error_message">Неправильный логин или пароль</string>
+    <string name="error_message">Неверный логин или пароль</string>
     <string name="loading_text">Проверка данных…</string>
     <string name="nav_profile">Профиль</string>
     <string name="nav_projects">Проекты</string>
@@ -21,7 +21,7 @@
     <string name="avatar">avatar</string>
     <string name="exit_button">exit</string>
     <string name="reload_button">ОБНОВИТЬ</string>
-    <string name="edit_button">edit</string>
+    <string name="edit_button">СОХРАНИТЬ</string>
     <string name="study_info">study information</string>
     <string name="tasks">Задачи</string>
     <string name="projects">Проекты</string>
@@ -34,4 +34,11 @@
     <string name="reload_text">Обновление информации</string>
     <string name="reload_desc">Чтобы синхронизировать данные личного кабинета на сайте ЯГТУ и данные в YUTA, введите свой пароль:</string>
     <string name="close_button">close</string>
+    <string name="edit_text">Редактирование профиля</string>
+    <string name="biography">О себе</string>
+    <string name="phone_number">Телефон</string>
+    <string name="email">E-mail</string>
+    <string name="vk">Ссылка на ВК</string>
+    <string name="error_phone">Неверный телефон</string>
+    <string name="error_email">Неверный e-mail</string>
 </resources>
