--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,15 @@
     <string name="delete_team_button">удалить команду</string>
     <string name="empty_text">Ой, команды не найдены…</string>
     <string name="error_update_message">Неправильный пароль :(</string>
+    <string name="add_team_member">добавить участника</string>
+    <string name="remove_team_member">удалить участника</string>
+    <string name="create_team_text">Создание команды</string>
+    <string name="create_team_desc">Придумайте краткое название команды:</string>
+    <string name="team_name">Название команды</string>
+    <string name="add_member_desc">Добавьте участиков команды:</string>
+    <string name="added_members_desc">Добавленные участники:</string>
+    <string name="find_name">ФИО</string>
+    <string name="search_button">ПОИСК</string>
+    <string name="error_team_message">Команда с данным названием уже существует!</string>
+    <string name="create_team_button">СОЗДАТЬ</string>
 </resources>
