Project dialogs design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="delete_button">ДА, УДАЛИТЬ</string>
     <string name="delete_photo_desc">Вы действительно хотите удалить фотографию?</string>
     <string name="delete_team_desc">Вы действительно хотите удалить команду</string>
+    <string name="delete_project_desc">Вы действительно хотите удалить проект</string>
     <string name="delete_text">Предупреждение</string>
     <string name="miniature_button">ВЫБРАТЬ МИНИАТЮРУ</string>
     <string name="upload_desc">Друзьям будет проще узнать вас, если вы загрузите свою настоящую фотографию.\nВы можете загрузить изображение в формате JPG, JPEG или PNG.</string>
@@ -75,16 +76,21 @@
     <string name="add_team_member">добавить участника</string>
     <string name="remove_team_member">удалить участника</string>
     <string name="create_team_text">Создание команды</string>
+    <string name="create_project_text">Создание проекта</string>
     <string name="create_team_desc">Придумайте краткое название команды:</string>
+    <string name="create_project_desc">Придумайте краткое название проекта:</string>
     <string name="team_name">Название команды*</string>
+    <string name="project_name">Название проекта*</string>
     <string name="add_member_desc">Добавьте участников команды:</string>
     <string name="added_members_desc">Добавленные участники:</string>
     <string name="find_name">ФИО</string>
+    <string name="find_team">Наименование команды</string>
     <string name="search_button">ПОИСК</string>
     <string name="error_team_message">Команда с данным названием уже существует!</string>
-    <string name="create_team_button">СОЗДАТЬ</string>
+    <string name="create_button">СОЗДАТЬ</string>
     <string name="edit_team_text">Редактирование команды</string>
-    <string name="empty_search_message">Таких пользователей нет!</string>
+    <string name="empty_user_search_message">Таких пользователей нет!</string>
+    <string name="empty_team_search_message">Такой команды не существует!</string>
     <string name="logout_button">выйти из профиля</string>
     <string name="tech_task_button">Техническое задание</string>
     <string name="project_status_header">Статус: </string>
@@ -93,4 +99,19 @@
     <string name="team">Команда</string>
     <string name="edit_project">Редактировать проект</string>
     <string name="delete_project">Удалить проект</string>
+    <string name="add_team">добавить команду</string>
+    <string name="remove_team">исключить команду</string>
+    <string name="tech_task">Техническое задание</string>
+    <string name="pick_tech_task">Выбрать файлы</string>
+    <string name="tech_task_not_picked">Файл не выбран</string>
+    <string name="tech_task_desc">Вы можете загрузить файл с техническим заданием в формате PDF.</string>
+    <string name="date_input">дд.мм.гггг</string>
+    <string name="deadline_header">Дедлайн проекта*</string>
+    <string name="project_desc">Краткое описание проекта*</string>
+    <string name="create_project_team_mode">Команда:</string>
+    <string name="create_project_without_team">Создать проект без команды и добавить её позже</string>
+    <string name="create_project_with_team">Прикрепить к проекту одну из своих команд</string>
+    <string name="added_team_desc">Прикрепленная команда:</string>
+    <string name="add_team_desc">Прикрепите команду к проекту:</string>
+    <string name="pick_date">выбор даты</string>
 </resources>
