open tech task of the project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
     <string name="logout_button_text">ДА, ВЫЙТИ</string>
     <string name="logout_desc">Вы действительно хотите выйти из приложения?</string>
     <string name="downloading">Загрузка</string>
+    <string name="tech_task_filename">tech_task.pdf</string>
 </resources>
