--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -120,4 +120,5 @@
     <string name="downloading">Загрузка</string>
     <string name="tech_task_filename">tech_task.pdf</string>
     <string name="project_menu">меню проекта</string>
+    <string name="nav_search">Поиск</string>
 </resources>
