form data bugfix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,7 +93,7 @@
     <string name="empty_user_search_message">Таких пользователей нет!</string>
     <string name="empty_team_search_message">Такой команды не существует!</string>
     <string name="logout_button">выйти из профиля</string>
-    <string name="tech_task_button">Техническое задание</string>
+    <string name="tech_task_button">ТЕХНИЧЕСКОЕ ЗАДАНИЕ</string>
     <string name="project_status_header">Статус:</string>
     <string name="project_deadline_header">Сдача проекта:</string>
     <string name="project_desc_header">Описание:</string>
